--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -webkit-font-smoothing: subpixel-antialiased;
     font-weight: normal;
+    font-family: 'Roboto Slab', serif;
 }
 
 button:focus,
@@ -91,6 +92,7 @@ button:focus,
         transform: rotate(0deg);
         /* Firefox 16+, IE 10+, Opera */
     }
+
     100% {
         -webkit-transform: rotate(360deg);
         /* Chrome, Opera 15+, Safari 3.1+ */
@@ -110,6 +112,7 @@ button:focus,
         transform: rotate(0deg);
         /* Firefox 16+, IE 10+, Opera */
     }
+
     100% {
         -webkit-transform: rotate(360deg);
         /* Chrome, Opera 15+, Safari 3.1+ */
@@ -213,6 +216,7 @@ h6 {
 }
 
 @media screen and (max-width: 500px) {
+
     h1,
     h2,
     h3,
@@ -229,7 +233,7 @@ h3 {
 }
 
 p {
-    margin: 0 0 25px;
+    margin: 0 0 12px;
     font-size: 16px;
     line-height: 1.7;
     font-family: 'Roboto Slab', serif;
@@ -335,7 +339,7 @@ a.active {
     font-weight: 300;
 }
 
-.nav > li {
+.nav>li {
     font-size: 13px;
 }
 
@@ -440,12 +444,13 @@ a.active {
 }
 
 @media only screen and (max-width: 818px) {
-    .nav > li > a {
+    .nav>li>a {
         padding: 15px 10px;
     }
 }
 
 @media (min-width: 768px) {
+
     /*.container {
       width: 900px;
     }*/
@@ -458,6 +463,7 @@ a.active {
         -moz-transition: background .5s ease-in-out, padding .5s ease-in-out;
         transition: background .5s ease-in-out, padding .5s ease-in-out;
     }
+
     .navbar-custom.top-nav-collapse {
         padding: 0;
         background: #000;
@@ -551,6 +557,7 @@ a.active {
     .intro-content {
         padding: 30% 0 5% 0;
     }
+
     .navbar-toggle {
         padding: 0px 10px;
     }
@@ -560,6 +567,7 @@ a.active {
     .intro-content {
         padding: 45% 0 5% 0;
     }
+
     a.fa.fa-angle-down {
         margin-top: 80px !important;
     }
@@ -683,9 +691,11 @@ a.fa.fa-angle-down:focus {
     #about #tl-dr h3 {
         font-size: 16px;
     }
+
     #about #tl-dr h4 {
         font-size: 14px;
     }
+
     #about #tl-dr h5 {
         font-size: 12px;
     }
@@ -695,6 +705,7 @@ a.fa.fa-angle-down:focus {
     #about #tl-dr {
         padding: 30px 0;
     }
+
     #about #tl-dr h5 {
         font-size: 11px;
     }
@@ -704,12 +715,15 @@ a.fa.fa-angle-down:focus {
     #about {
         padding: 60px 10px;
     }
+
     #about #tl-dr h5 {
         /*font-size: 10px;*/
     }
+
     .tldr-icon {
         font-size: 30px;
     }
+
     #tldr-keyboard {
         font-size: 40px;
     }
@@ -719,12 +733,15 @@ a.fa.fa-angle-down:focus {
     #about img#prof-pic {
         width: 150px;
     }
+
     #about #tl-dr {
         width: 90%;
     }
+
     h2 {
         font-size: 22px;
     }
+
     .tlder-proc {
         width: 32%;
     }
@@ -736,12 +753,15 @@ a.fa.fa-angle-down:focus {
         height: 180px;
         width: 95%;
     }
+
     #about #tl-dr h4 {
         margin-bottom: 5px;
     }
+
     .tldr-icon {
         /*font-size: 24px;*/
     }
+
     #tldr-keyboard {
         font-size: 34px;
     }
@@ -803,9 +823,11 @@ a.fa.fa-angle-down:focus {
     #services {
         padding: 60px 10px;
     }
+
     #services h3 {
         margin-bottom: 20px;
     }
+
     #services p {
         font-size: 14px;
         max-width: 100%;
@@ -984,6 +1006,7 @@ a.fa.fa-angle-down:focus {
     0% {
         width: 0%;
     }
+
     100% {
         width: 95%;
     }
@@ -993,6 +1016,7 @@ a.fa.fa-angle-down:focus {
     0% {
         width: 0%;
     }
+
     100% {
         width: 90%;
     }
@@ -1002,6 +1026,7 @@ a.fa.fa-angle-down:focus {
     0% {
         width: 0%;
     }
+
     100% {
         width: 80%;
     }
@@ -1011,6 +1036,7 @@ a.fa.fa-angle-down:focus {
     0% {
         width: 0%;
     }
+
     100% {
         width: 70%;
     }
@@ -1020,6 +1046,7 @@ a.fa.fa-angle-down:focus {
     0% {
         width: 0%;
     }
+
     100% {
         width: 55%;
     }
@@ -1029,6 +1056,7 @@ a.fa.fa-angle-down:focus {
     0% {
         width: 0%;
     }
+
     100% {
         width: 95%;
     }
@@ -1038,6 +1066,7 @@ a.fa.fa-angle-down:focus {
     0% {
         width: 0%;
     }
+
     100% {
         width: 90%;
     }
@@ -1047,6 +1076,7 @@ a.fa.fa-angle-down:focus {
     0% {
         width: 0%;
     }
+
     100% {
         width: 80%;
     }
@@ -1056,6 +1086,7 @@ a.fa.fa-angle-down:focus {
     0% {
         width: 0%;
     }
+
     100% {
         width: 70%;
     }
@@ -1065,6 +1096,7 @@ a.fa.fa-angle-down:focus {
     0% {
         width: 0%;
     }
+
     100% {
         width: 55%;
     }
@@ -1074,6 +1106,7 @@ a.fa.fa-angle-down:focus {
     0% {
         width: 0%;
     }
+
     100% {
         width: 95%;
     }
@@ -1083,6 +1116,7 @@ a.fa.fa-angle-down:focus {
     0% {
         width: 0%;
     }
+
     100% {
         width: 90%;
     }
@@ -1092,6 +1126,7 @@ a.fa.fa-angle-down:focus {
     0% {
         width: 0%;
     }
+
     100% {
         width: 80%;
     }
@@ -1101,6 +1136,7 @@ a.fa.fa-angle-down:focus {
     0% {
         width: 0%;
     }
+
     100% {
         width: 70%;
     }
@@ -1110,6 +1146,7 @@ a.fa.fa-angle-down:focus {
     0% {
         width: 0%;
     }
+
     100% {
         width: 55%;
     }
@@ -1166,15 +1203,19 @@ a.fa.fa-angle-down:focus {
     .skills-section .skill-icon img#html {
         width: 55px;
     }
+
     .skills-section .skill-icon img#css {
         width: 55px;
     }
+
     .skills-section .skill-icon img#sass {
         margin-top: 15px;
     }
+
     .skills-section .skill-icon img#js {
         width: 55px;
     }
+
     .skills-section .skill-icon img#node {
         width: 100px;
     }
@@ -1234,13 +1275,16 @@ img#nu-logo {
         width: 100%;
         min-width: 100px;
     }
+
     .employment h3 {
         font-size: 16px;
         margin-bottom: 0;
     }
+
     img#mullen-logo {
         width: 200px;
     }
+
     img#nu-logo {
         width: 150px;
     }
@@ -1250,14 +1294,17 @@ img#nu-logo {
     #experience {
         padding: 60px 0px;
     }
+
     #experience p {
         padding-bottom: 20px;
     }
+
     .skills,
     .employment {
         display: block;
         width: 100%;
     }
+
     img#nu-logo {
         width: 120px;
     }
@@ -1858,6 +1905,7 @@ ul.social-buttons li a:active {
     #to-top {
         margin-top: 0px;
     }
+
     .copyright {
         padding-top: 0px;
         margin-top: 0px;
@@ -1883,7 +1931,7 @@ ul.social-buttons li a:active {
 
 @media screen and (min-width: 768px) {
     .modal-dialog {
-        width: 700px;
+        width: 900px;
     }
 }
 
@@ -1908,9 +1956,7 @@ ul.social-buttons li a:active {
     margin: 0 auto;
 }
 
-.modal-body p {
-    text-align: center;
-}
+.modal-body p {}
 
 @media (max-width: 340px) {
     .modal-body p {
