--- a/css/styles.css
+++ b/css/styles.css
@@ -500,7 +500,7 @@ a.active {
 /* ======= INTRODUCTION ======= */
 
 #intro {
-    background: url(../img/mountain-dusk.jpg);
+    background: url(../img/bg.png);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
